please give me 60 balls!

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a href="#">Контакты</a>
             </div>
             <div class="call_me">
-                <p>+7 (930) 283-50-65</p>
+                <a href="tel: +79302835065">+7 (930) 283-50-65</a>
                 <button class="button-1 hero-btn-1">
                     <a href="tel: +79302855065">Перезвоните мне!</a>
                 </button>
