I will FINISH THIS EXAM!

--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
         <section>
             <div class="main-cards">
                 <div class="card">
-                    <div class="restangle"></div>
-                    <img src="./img/worker.svg" alt="worker">
+                    <div class="card-img">
+                        <div class="restangle"></div>
+                        <img src="./img/worker.svg" alt="worker">
+                    </div>
                     <div class="card-text">
                         <b>Работаем <br>
                             без посредников</b>
@@ -79,8 +81,10 @@
                     </div>
                 </div>
                 <div class="card">
-                    <div class="restangle"></div>
-                    <img src="./img/Union.svg" alt="worker">
+                    <div class="card-img">
+                        <div class="restangle"></div>
+                        <img src="./img/Union.svg" alt="worker">
+                    </div>
                     <div class="card-text">
                         <b>Фиксированные <br>
                             цены</b>
@@ -91,8 +95,10 @@
                     </div>
                 </div>
                 <div class="card">
-                    <div class="restangle"></div>
-                    <img src="./img/Union (1).svg" alt="worker">
+                    <div class="card-img">
+                        <div class="restangle"></div>
+                        <img src="./img/Union (1).svg" alt="worker">
+                    </div>
                     <div class="card-text">
                         <b>Любые варианты <br>
                             отделки</b>
@@ -119,7 +125,7 @@
                             <button class="button-4 hero-btn-4">Подробнее</button>
                         </div>
                     </div>
-                    <div class="catalog-card">                        
+                    <div class="catalog-card">
                         <img src="./img/Group 184.svg" alt="stair">
                         <div class="catalog-card-text">
                             <h3>Забежная лестница</h3>
