I should fix the bags

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 <a href="#">Примеры работ</a>
                 <a href="#">Блог</a>
                 <a href="#">Контакты</a>
+                <svg class="bi-list bi-solid" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+                  </svg>
             </div>
             <div class="call_me">
                 <a href="tel: +79302835065">+7 (930) 283-50-65</a>
