A few time for coding? and I'll get better mark

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
-    <title>exam</title>
+    <title>exam.app</title>
 </head>
 
 <body>
@@ -28,9 +28,11 @@
                 <a href="#">Примеры работ</a>
                 <a href="#">Блог</a>
                 <a href="#">Контакты</a>
-                <svg class="bi-list bi-solid" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
-                  </svg>
+                <svg class="bi-list bi-solid" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                    fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+                </svg>
             </div>
             <div class="call_me">
                 <a href="tel: +79302835065">+7 (930) 283-50-65</a>
@@ -151,7 +153,7 @@
             <div class="order-3d">
                 <div class="order-3d-title">
                     <h1>Получите 3d-визуализацию вашей будущей лестницы бесплатно!</h1>
-                    <p>Оставьте свои контактные данные и наш специалист свяжется свами в течении 15 минут!</p>
+                    <p>Оставьте свои контактные данные и наш специалист свяжется с вами в течении 15 минут!</p>
                 </div>
                 <div class="order-3d-form">
                     <form action="">
@@ -162,7 +164,7 @@
                         </div>
                         <div class="submit">
                             <button class="button-5 hero-btn-5">Отправить заявку</button>
-                            <p class="order-3d-text2">Нажимая на кнопку
+                            <p class="privacy-policy">Нажимая на кнопку
                                 вы соглашаетесь с <a href="#">политикой
                                     конфиденциальности</a></p>
                         </div>
@@ -170,7 +172,298 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="about-company">
+                <div class="about-company-text">
+                    <h2>Почему стоит
+                        обратиться к нам</h2>
+                    <br>
+                    <p class="p-11">Мы воплощаем ваши <br>
+                        идеи в реальность</p>
+                    <p class="p-12">Популярность монолитных лестничных систем
+                        из железобетона в современном строительстве очень высока. Когда решите заказать эксклюзивную
+                        бетонную лестницу, главное — не ошибиться
+                        с выбором ее изготовителя. Отдав предпочтение компании «Лесенка 52», вы найдете в нашем лице
+                        надежного партнера, с отличной репутацией,
+                        предлагающего лучшие в регионе качество
+                        и расценки.
+                        <br>
+                        <br>
+                        Популярность монолитных лестничных систем
+                        из железобетона в современном строительстве очень высока.
+                    </p>
+                </div>
+                <div class="about-company-menu">
+                    <div class="acm-title">
+                        <h3>Наша
+                            специализация:</h3>
+                    </div>
+                    <div class="select">
+                        <div class="selector">
+                            <div class="selector-img">
+                                <div class="restangle"></div>
+                                <img src="./img/Union (4).svg" alt="Union">
+                            </div>
+                            <div class="selector-text">
+                                <p>Проектирование</p>
+                            </div>
+                        </div>
+                        <div class="selector">
+                            <div class="selector-img">
+                                <div class="restangle"></div>
+                                <img src="./img/Union (2).svg" alt="Union">
+                            </div>
+                            <div class="selector-text">
+                                <p>Изготовление</p>
+                            </div>
+                        </div>
+                        <div class="selector">
+                            <div class="selector-img">
+                                <div class="restangle"></div>
+                                <img src="./img/Union (3).svg" alt="Union">
+                            </div>
+                            <div class="selector-text">
+                                <p>Монтаж и отделка</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="about-company-img">
+                    <img src="./img/5C38857F-7A91-45F5-9CAC-51EAC68492F6 2.jpg" alt="stairs">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="project">
+                <div class="project-text">
+                    <div class="project-title">
+                        <h2>Примеры
+                            наших работ</h2>
+                    </div>
+                    <p class="p-21">Прямая лестница в новом
+                        доме, г. Нижний Новгород
+                    </p>
+                    <p class="p-22">Тип помещения: <b>частный дом</b>
+                        Высота от пола до потолка: <b>3,1 м</b>
+                        Количество ступеней: <b>18 шт.</b>
+                        Количество подъемов: <b>20 шт.</b>
+                        Срок изготовления: <b>17 дней</b></p>
+                    <p class="p-23">Стоимость <b>75 000</b> ₽</p>
+                    <button class="button-6 hero-btn-6">Хочу такую лестницу</button>
+                </div>
+                <div class="project-img">
+                    <img src="./img/IMG_1670 1.jpg" alt="stairs">
+                    <div class="background-2"></div>
+                    <div class="restangles-arrows">
+                        <div class="arrows">
+                            <img src="./img/arrows.svg" alt="arrows">
+                        </div>
+                        <div class="restangles">
+                            <img src="./img/Rectangle 35.svg" alt="restangle">
+                            <img src="./img/Rectangle 34.svg" alt="restangle">
+                            <img src="./img/Rectangle 35.svg" alt="restangle">
+                            <img src="./img/Rectangle 35.svg" alt="restangle">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="about-stairs">
+                <div class="about-stairs-title">
+                    <h2>Преимущества
+                        монолитных лестниц</h2>
+                </div>
+                <div class="about-stairs-desc">
+                    <div class="about-stairs-img">
+                        <img src="./img/img.jpg" alt="stairs">
+                    </div>
+                    <piv class="about-stairs-desc-text">
+                        <p class="p-31">Долговечность и надежность</b>
+                        <p class="p-32">Монолитные лестницы из бетона выдерживают большую
+                            нагрузку — 800–1000 кг/см2. Срок службы бетона — 100 и более лет.</p>
+                        <br>
+                        <br>
+                        <p class="p-31">Разнообразие форм, конфигураций и стилей</p>
+                        <p class="p-32">Большой выбор форм лестниц поможет вашему дому
+                            выделиться и приобрести уникальность.</p>
+                        <br>
+                        <br>
+                        <p class="p-31">Низкий уровень шума и вибраций</p>
+                        <p class="p-32">При ходьбе или беге по ним не передаются колебания
+                            на несущие конструкции и глушатся шумы.</p>
+                        <br>
+                        <br>
+                        <p class="p-31">Отсутствие опор в конструкции</p>
+                        <p class="p-32">Существенно сохраняет свободное пространство, сокращает количество материалов
+                            для
+                            изготовления
+                            лестницы.
+                        </p>
+                        <br>
+                        <br>
+                        <p class="p-31">Возможность отделки любыми материалами</p>
+                        <p class="p-32">Дерево, керамическая плитка, клинкерная плитка, кованые элементы, ковролин,
+                            ламинат,
+                            натуральный
+                            камень, стекло.</p>
+                        <br>
+                        <br>
+                        <p class="p-31">Пожаробезопасность, огнестойкость</p>
+                        <p class="p-32">Бетон, из которого изготавливаются монолитные бетонные лестницы не горючий,
+                            огнеупорный
+                            материал.
+                        </p>
+                </div>
+            </div>
+            </div>
+        </section>
+        <section>
+            <div class="work-steps">
+                <div class="work-steps-title">
+                    <h2>Как мы
+                        работаем?</h2>
+                </div>
+                <div class="work-steps-cards">
+                    <div class="work-steps-card">
+                        <div class="ws-card-logo">
+                            <div class="restangle"></div>
+                            <h1>01</h1>
+                        </div>
+                        <div class="ws-card-text">
+                            <p class="p-41">Ваша заявка
+                                на замер</p>
+                            <p class="p-42">
+                                Позвоните нам или
+                                заполните форму
+                                обратной связи
+                                заказа на сайте.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="work-steps-card">
+                        <div class="ws-card-logo">
+                            <div class="restangle"></div>
+                            <h1>02</h1>
+                        </div>
+                        <div class="ws-card-text">
+                            <p class="p-41">Замер и проектирование</p>
+                            <p class="p-42">
+                                В удобное вам время
+                                проводим замеры.
+                                Проектируем удобную
+                                конструкцию.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="work-steps-card">
+                        <div class="ws-card-logo">
+                            <div class="restangle"></div>
+                            <h1>03</h1>
+                        </div>
+                        <div class="ws-card-text">
+                            <p class="p-41">Оформление
+                                договора</p>
+                            <p class="p-42">
+                                Просчитываем смету,
+                                готовим договор.
+                                После согласования
+                                подписываем договор.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="work-steps-card">
+                        <div class="ws-card-logo">
+                            <div class="restangle"></div>
+                            <h1>04</h1>
+                        </div>
+                        <div class="ws-card-text">
+                            <p class="p-41">Выполнение
+                                работ</p>
+                            <p class="p-42">
+                                Выполняем комплекс
+                                работ, качественно
+                                и в установленные
+                                договором сроки.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="background-3"></div>
+            </div>
+        </section>
+        <section>
+            <div class="questions">
+                <div class="questions-iframe">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d334648.51646344893!2d72.8354349305886!3d49.82397449527989!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4243465ad22d0559%3A0xa90b6be0d244d433!2z0JrQsNGA0LDQs9Cw0L3QtNCwIDEwMDAwMCwg0JrQsNC30LDRhdGB0YLQsNC9!5e0!3m2!1sru!2s!4v1682887423708!5m2!1sru!2s"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div class="questions-form">
+                    <div class="questions-text">
+                        <h2>У вас остались
+                            вопросы?</h2>
+                        <p>Не нашли нужной информации? Интересует что-то конкретное? Напишите нам и наши специалисты
+                            ответят вам в течении 30 минут!</p>
+                    </div>
+                    <form action="">
+                        <div class="questions-input">
+                            <input type="text" placeholder="Ваше  имя...">
+                            <input type="text" placeholder="Ваш телефон...">
+                            <input type="text" placeholder="Ваш вопрос...">
+                        </div>
+                        <div class="submit-2">
+                            <button class="button-7 hero-btn-7">Отправить сообщение</button>
+                            <p class="privacy-policy-2">Нажимая на кнопку
+                                вы соглашаетесь с <a href="#">политикой
+                                    конфиденциальности</a></p>
+                        </div>
+                    </form>
+                </div>
+        </section>
     </main>
+    <footer class="footer container">
+        <div class="footer-part-1">
+            <div class="footer-logo">
+                <div class="footer-logo-part-1">
+                    <img src="./img/Group 193.svg" alt="lesenka">
+                    <div class="footer-logo-text">
+                        <p>Проектирование
+                            Изготовление
+                            Монтаж</p>
+                    </div>
+                </div>
+                <div class="footer-logo-part-2">
+                    <h5>МОНОЛИТНЫЕ ЛЕСТНИЦЫ</h5>
+                </div>
+            </div>
+            <div class="footer-menu">
+                <div class="footer-menu-part-1">
+                    <a href="#">О компании</a>
+                    <a href="#">Каталог</a>
+                    <a href="#">Блог</a>
+                </div>
+                <div class="footer-menu-part-2">
+                    <a href="#">Примеры работ</a>
+                    <a href="#">Контакты</a>
+                </div>
+            </div>
+            <div class="call_me-2">
+                <a href="tel: +79302835065">+7 (930) 283-50-65</a>
+                <button class="button-1 hero-btn-1">
+                    <a href="tel: +79302835065">Перезвоните мне!</a>
+                </button>
+            </div>
+        </div>
+        <div class="footer-part-2">
+            <a>© 2020 Все права защищены.</a>
+            <a>Политика конфиденциальности</a>
+            <img src="./img/vk.svg" alt="vk">
+            <img src="./img/instagramm.svg" alt="instagramm">
+        </div>
+    </footer>
 </body>
 
 </html>
