It's not finished yet

--- a/index.html
+++ b/index.html
@@ -458,10 +458,12 @@
             </div>
         </div>
         <div class="footer-part-2">
-            <a>© 2020 Все права защищены.</a>
-            <a>Политика конфиденциальности</a>
-            <img src="./img/vk.svg" alt="vk">
-            <img src="./img/instagramm.svg" alt="instagramm">
+            <a href="#">© 2020 Все права защищены.</a>
+            <a href=#>Политика конфиденциальности</a>
+            <div class="social-media">
+                <img src="./img/vk.svg" alt="vk">
+                <img src="./img/instagramm.svg" alt="instagramm">
+            </div>
         </div>
     </footer>
 </body>
